k8s-manifest/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args: ["start-dev"]  # use "start" in production
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health/live
          #     port: 8080
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-keycloak
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: keycloak
